--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "otakumesi",
-  "version": "0.0.1",
+  "version": "0.0.2.1",
   "description": "my profile.",
   "repository": "otakumesi/otakumesi",
   "main": "src/app.js",
-  "bin": "cli/app.js",
+  "bin": "cli/otakumesi.js",
   "engines": {
     "node": ">=8"
   },
